fix: use Arrays.asList for nullable elements in integration test; List.of rejects nulls